--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React game",
   "main": "./backend/app.js",
   "scripts": {
-    "postinstall": "cd backend && npm i && npx sequelize db:migrate",
+    "postinstall": "cd backend && npm i && npx sequelize db:migrate && cd ../frontend && npm i && npm run build",
     "start": "cd backend && npm start"
   },
   "author": "Voldo",
